--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postuninstall": "yarn stage --commit"
   },
   "dependencies": {
+    "@craftjs/core": "^0.2.0-beta.3",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
